--- a/notebook/CeQuilFautDeScalaPourSpark.ipynb
+++ b/notebook/CeQuilFautDeScalaPourSpark.ipynb
@@ -240,7 +240,7 @@
     "\n",
     "> Dans notre prochain exemple de code, nous définissons plusieurs _méthodes_ helper pour afficher des informations, mais vous ne verrez pas de définition de classe ici. Ainsi, quelle est la classe associée à ces méthodes ? Quand vous utilisez Scala dans un notebook, vous utilisez en fait l'interpréteur Scala, qui prend chaque expression et définition que nous avons écrit et les met dans une classe cachée. L'interpréteur fait cela pour générer du byte code valide pour la JVM.\n",
     "\n",
-    "> Malheuresement, cela peut-être assez confus de savoir quand il faut utiliser une méthode ou une fonction et cela reflète la nature hybride de Scala comme un langage orienté objet et un langage fonctionnel. Heureusement, dans la majorité des cas, nous pouvons utiliser des méthodes et fonctions interchangeablement, donc ne vous préoccupez pas trop de la distinction à partir de maintenant.\n",
+    "> Malheureusement, cela peut-être assez confus de savoir quand il faut utiliser une méthode ou une fonction et cela reflète la nature hybride de Scala comme un langage orienté objet et un langage fonctionnel. Heureusement, dans la majorité des cas, nous pouvons utiliser des méthodes et fonctions interchangeablement, donc ne vous préoccupez pas trop de la distinction à partir de maintenant.\n",
     "\n",
     "> Nous allons maintenant définir des méthodes. Nous allons voir ce qu'est une véritable _fonction_ bientôt."
    ]
@@ -423,14 +423,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les définitions de méthodes possèdent ces éléments suivants dans cet ordre :\n",
+    "Les définitions des méthodes possèdent les éléments suivants dans cet ordre :\n",
     "* Le mot clé `def` \n",
     "* Le nom de la méthode (`error` et `info` ici)\n",
     "* La liste des arguments entre parenthèses. S'il n'y a pas d'arguments, les parenthèses vides peuvent être omises. Commun pour `toString` et les getter qui retournent un champ dans une instance, etc.\n",
-    "* Deux points suivi par le type de retour de la méthode. Ce type est souvent inferé par Scala et il n'est donc pas obligatoire mais il est fortement recommandé de le mettre tout le temps !\n",
+    "* Deux points suivi par le type de retour de la méthode. Ce type est souvent inferé par Scala et il n'est donc pas obligatoire, mais il est fortement recommandé de le mettre tout le temps !\n",
     "* Un signe `=` qui sépare la _signature_ de la méthode du _corps_\n",
-    "* Le corps entre accolades `{ ... }`, cependant si le corps consiste d'une seule expression alors les accolades sont optionnels\n",
-    "* La dernière expression dans le corps est utilisé comme valeur de retour. Le mot clé `return` est déconseillé\n",
+    "* Le corps entre accolades `{ ... }`, cependant si le corps consiste en une seule expression alors les accolades sont optionnelles\n",
+    "* La dernière expression dans le corps est utilisée comme valeur de retour. Le mot clé `return` est déconseillé\n",
     "* Les point-virgules `;` sont inferés et ne sont pas utilisés dans la grande majorité des cas"
    ]
   },
@@ -796,7 +796,7 @@
     "```\n",
     "Nous itérons sur une collection `plays`, et assignons chacun à la variable `play` (qui est en fait une valeur immutable pour chaque itération). \n",
     "\n",
-    "Après avoir assigné à `play`, les prochaines étapes dans la `for` comprehension l'utilise. Premièrement, une instance de  [java.io.File](https://docs.oracle.com/javase/8/docs/api/java/io/File.html) `playFile`, est crée. Ensuite `playFile` est utilisé pour évaluer un prédicat - le fichier existe t'il déjà ? (Il devrait !)\n",
+    "Après avoir assigné `play`, les prochaines étapes dans la `for` comprehension l'utilisent. Premièrement, une instance de  [java.io.File](https://docs.oracle.com/javase/8/docs/api/java/io/File.html) `playFile`, est créée. Ensuite `playFile` est utilisé pour évaluer un prédicat - le fichier existe t'il déjà ? (Il devrait !)\n",
     "\n",
     "Si le fichier existe déjà alors `false` est retourné, ce qui casse la boucle et nous passons à la prochaine itération.\n",
     "Si le fichier n'existe pas, alors le mot clé `yield` dit à Scala que nous voulons utiliser l'expression qui suit pour construire un nouvel élément, une string _interpolée_ pour les pièces manquantes. Parmi ces éléments retournés, pouvant aller de zéro à un nombre, une nouvelle collection est construite. Le bloc final `if` détermine si la nouvelle collection a zéro éléments (attendu), puis affiche un message `info`. Si des fichiers manquaient, alors un message `error` serait affiché pour chacun des fichiers manquant."
@@ -808,7 +808,7 @@
    "source": [
     "## Utiliser des fonctions comme argument\n",
     "\n",
-    "Notez comment nous avons affiché les `successes`. L'idiome `collection.foreach(println)` est utile pour itérer sur des éléments et les afficher, un par ligne. Mais comment cela marche t'il exactement ? (Nous utiliserons `plays` au lieu de `failures`, parce que le deuxième est normalement toujours vide !)"
+    "Notez comment nous avons affiché les `successes`. L'idiome `collection.foreach(println)` est utile pour itérer sur des éléments et les afficher, un par ligne. Mais comment cela marche exactement ? (Nous utiliserons `plays` au lieu de `failures`, parce que le deuxième est normalement toujours vide !)"
    ]
   },
   {
@@ -936,13 +936,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inverted Index - Quand vous ne voulez plus comptez les mots...\n",
+    "## Inverted Index - Quand vous ne voulez plus compter les mots...\n",
     "\n",
-    "Vpus allez avoir besoin d'utiliser _Inverted Index_ quand vous aller créer votre prochain \"Google killer\". Il prend en entrée un corpus de documents (des pages webs par exemple), tokenize les mots et sort pour chaque mot une liste des documents qui contienne ce mot avec à côté le nombre de fois que ce mot apparaît.\n",
+    "Vous allez avoir besoin d'utiliser _Inverted Index_ quand vous allez créer votre prochain \"Google killer\". Il prend en entrée un corpus de documents (des pages webs par exemple), tokenize les mots et sort pour chaque mot une liste des documents qui contiennent ce mot avec à côté le nombre de fois où ce mot apparaît.\n",
     "\n",
-    "C'est un algorithme un peu plus intéressant que le _Word Count_, qui est en quelque sorte le \"hello world\" que tout le monde fait quand la personne apprend Spark.\n",
+    "C'est un algorithme un peu plus intéressant que le _Word Count_, qui est en quelque sorte le \"hello world\" que tout le monde fait quand une personne apprend Spark.\n",
     "\n",
-    "Le terme _inverted_  signifie que nous commencons avec des mots comme valeurs d'entrée tandis que les clés sont des identifiants de documents et que nous allons inverser le fait d'utiliser les mots comme clé et les identifiants de document comme valeur."
+    "Le terme _inverted_  signifie que nous commençons avec des mots comme valeurs d'entrée tandis que les clés sont des identifiants de documents et que nous allons inverser le fait d'utiliser les mots comme clé et les identifiants de document comme valeur."
    ]
   },
   {
@@ -1059,7 +1059,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous allons voir sous peu que nous pouvons aussi écrire des _instances_ de [Tuple2[T1,T2]](http://www.scala-lang.org/api/current/index.html#scala.Tuple2) avec la même syntaxe, e.g., `(\"foo\", 101)`, pour un tuple `(String,Int)`, et similairement pour des tuples d'_arité supérieur_ (jusqu'à 22 elements...), e.g., `(\"foo\", 101, 3.14159, (\"bar\", 202L))`. Faites tourner la prochaine cellule pour voir le type du tuple."
+    "Nous allons voir sous peu que nous pouvons aussi écrire des _instances_ de [Tuple2[T1,T2]](http://www.scala-lang.org/api/current/index.html#scala.Tuple2) avec la même syntaxe, e.g., `(\"foo\", 101)`, pour un tuple `(String,Int)`, et similairement pour des tuples d'_arité supérieur_ (jusqu'à 22 elements...), e.g., `(\"foo\", 101, 3.14159, (\"bar\", 202L))`. Éxécutez la prochaine cellule pour voir le type du tuple."
    ]
   },
   {
